sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: Int does not take parameters
          echange(i,i+1)
                 ^