sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for(j <- 0 to getNombreValeurs()-1){
    var fin=0
    var echange=1
    while (fin!=0){
      fin=echange
      for(i <- 0 to getNombreValeurs()-2){
        var a=getValeur(i)
        var b=getValeur(i+1)
        if(!plusPetitQue(a,b)){
          echange(i,i+1)
          echange=echange+1
          
        }
      }
    }
  }
}